# hypatia-lit

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  run_desktop.py
.streamlit/: config.toml
scripts/: test_api.py  update_book_content.py
src/: agent.py  cli.py  export.py  graph.py  models.py  prompts.py  ui.py
